--- a/ObjectValidator/ObjectValidator.csproj
+++ b/ObjectValidator/ObjectValidator.csproj
@@ -40,6 +40,8 @@
     <Compile Include="Base\RuleBuilder.cs" />
     <Compile Include="Base\RuleSelector.cs" />
     <Compile Include="Base\ValidateRule.cs" />
+    <Compile Include="Base\Validator.cs" />
+    <Compile Include="Base\ValidatorBuilder.cs" />
     <Compile Include="Common\Utils.cs" />
     <Compile Include="Entities\ValidateContext.cs" />
     <Compile Include="Common\NotifyCollectionChangedAction.cs" />
@@ -49,7 +51,6 @@
     <Compile Include="Container.cs" />
     <Compile Include="Common\EnumerableHelper.cs" />
     <Compile Include="Common\ParamHelper.cs" />
-    <Compile Include="CustomValidator.cs" />
     <Compile Include="Entities\ValidateFailure.cs" />
     <Compile Include="Entities\ValidateOption.cs" />
     <Compile Include="Entities\ValidateResult.cs" />
@@ -59,8 +60,12 @@
     <Compile Include="Interfaces\IValidateResult.cs" />
     <Compile Include="Interfaces\IValidateRule.cs" />
     <Compile Include="Interfaces\IValidateRuleBuilder.cs" />
+    <Compile Include="Interfaces\IValidator.cs" />
+    <Compile Include="Interfaces\IValidatorBuilder.cs" />
+    <Compile Include="Interfaces\IValidatorSetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Syntax.cs" />
+    <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
