--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Common\Utils_Test.cs" />
     <Compile Include="Entities\ValidateResult_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObjectValidator\ObjectValidator.csproj">
