--- a/ObjectValidator/ObjectValidator.csproj
+++ b/ObjectValidator/ObjectValidator.csproj
@@ -42,6 +42,13 @@
     <Compile Include="Base\ValidateRule.cs" />
     <Compile Include="Base\Validator.cs" />
     <Compile Include="Base\ValidatorBuilder.cs" />
+    <Compile Include="Checkers\BaseChecker.cs" />
+    <Compile Include="Checkers\LengthChecker.cs" />
+    <Compile Include="Checkers\NotEqualChecker.cs" />
+    <Compile Include="Checkers\NotNullChecker.cs" />
+    <Compile Include="Checkers\MustChecker.cs" />
+    <Compile Include="Checkers\RegexChecker.cs" />
+    <Compile Include="Common\Comparer.cs" />
     <Compile Include="Common\Utils.cs" />
     <Compile Include="Entities\ValidateContext.cs" />
     <Compile Include="Common\NotifyCollectionChangedAction.cs" />
