--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -89,6 +89,11 @@
     <Compile Include="Base\ValidateRule_Test.cs" />
     <Compile Include="Base\ValidatorBuilder_Test.cs" />
     <Compile Include="Base\Validator_Test.cs" />
+    <Compile Include="Checkers\LengthChecker_Test.cs" />
+    <Compile Include="Checkers\MustChecker_Test.cs" />
+    <Compile Include="Checkers\NotEqualChecker_Test.cs" />
+    <Compile Include="Checkers\NotNullChecker_Test.cs" />
+    <Compile Include="Checkers\RegexChecker_Test.cs" />
     <Compile Include="Common\EnumerableHelper_Test.cs" />
     <Compile Include="Common\ObservableCollection_Test.cs" />
     <Compile Include="Common\Utils_Test.cs" />
