--- a/ObjectValidator/ObjectValidator.csproj
+++ b/ObjectValidator/ObjectValidator.csproj
@@ -43,7 +43,9 @@
     <Compile Include="Base\Validator.cs" />
     <Compile Include="Base\ValidatorBuilder.cs" />
     <Compile Include="Checkers\BaseChecker.cs" />
+    <Compile Include="Checkers\EqualChecker.cs" />
     <Compile Include="Checkers\LengthChecker.cs" />
+    <Compile Include="Checkers\MustNotChecker.cs" />
     <Compile Include="Checkers\NotEqualChecker.cs" />
     <Compile Include="Checkers\NotNullChecker.cs" />
     <Compile Include="Checkers\MustChecker.cs" />
