--- a/ObjectValidator/ObjectValidator.csproj
+++ b/ObjectValidator/ObjectValidator.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Base\ValidateRule.cs" />
     <Compile Include="Base\Validator.cs" />
     <Compile Include="Base\ValidatorBuilder.cs" />
+    <Compile Include="Checkers\AllMustChecker.cs" />
     <Compile Include="Checkers\BaseChecker.cs" />
     <Compile Include="Checkers\BetweenChecker.cs" />
     <Compile Include="Checkers\EqualChecker.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Checkers\MustChecker.cs" />
     <Compile Include="Checkers\NotNullOrEmptyChecker.cs" />
     <Compile Include="Checkers\RegexChecker.cs" />
+    <Compile Include="CollectionSyntax.cs" />
     <Compile Include="Common\Comparer.cs" />
     <Compile Include="Common\Utils.cs" />
     <Compile Include="Entities\ValidateContext.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="Interfaces\IRuleBuilder.cs" />
     <Compile Include="Interfaces\IRuleMessageBuilder.cs" />
     <Compile Include="Interfaces\IRuleSelector.cs" />
+    <Compile Include="Interfaces\IRuleValueGetterBuilder.cs" />
     <Compile Include="Interfaces\IValidateResult.cs" />
     <Compile Include="Interfaces\IValidateRule.cs" />
     <Compile Include="Interfaces\IValidateRuleBuilder.cs" />
