--- a/ObjectValidator/ObjectValidator.csproj
+++ b/ObjectValidator/ObjectValidator.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Checkers\NotNullChecker.cs" />
     <Compile Include="Checkers\MustChecker.cs" />
     <Compile Include="Checkers\NotNullOrEmptyChecker.cs" />
+    <Compile Include="Checkers\NotNullOrWhiteSpaceChecker.cs" />
     <Compile Include="Checkers\RegexChecker.cs" />
     <Compile Include="CollectionSyntax.cs" />
     <Compile Include="Common\Comparer.cs" />
