add some check methods

--- a/ObjectValidator/ObjectValidator.csproj
+++ b/ObjectValidator/ObjectValidator.csproj
@@ -45,16 +45,43 @@
     <Compile Include="Base\Validator.cs" />
     <Compile Include="Base\ValidatorBuilder.cs" />
     <Compile Include="Checkers\BaseChecker.cs" />
-    <Compile Include="Checkers\BetweenChecker.cs" />
+    <Compile Include="Checkers\BetweenFloatChecker.cs" />
+    <Compile Include="Checkers\BetweenIntChecker.cs" />
+    <Compile Include="Checkers\BetweenDecimalChecker.cs" />
+    <Compile Include="Checkers\BetweenDoubleChecker.cs" />
+    <Compile Include="Checkers\BetweenLongChecker.cs" />
+    <Compile Include="Checkers\CustomChecker.cs" />
     <Compile Include="Checkers\EachChecker.cs" />
     <Compile Include="Checkers\EqualChecker.cs" />
+    <Compile Include="Checkers\GreaterThanFloatChecker.cs" />
+    <Compile Include="Checkers\GreaterThanIntChecker.cs" />
+    <Compile Include="Checkers\GreaterThanDecimalChecker.cs" />
+    <Compile Include="Checkers\GreaterThanDoubleChecker.cs" />
+    <Compile Include="Checkers\GreaterThanLongChecker.cs" />
+    <Compile Include="Checkers\GreaterThanOrEqualDecimalChecker.cs" />
+    <Compile Include="Checkers\GreaterThanOrEqualDoubleChecker.cs" />
+    <Compile Include="Checkers\GreaterThanOrEqualFloatChecker.cs" />
+    <Compile Include="Checkers\GreaterThanOrEqualIntChecker.cs" />
+    <Compile Include="Checkers\GreaterThanOrEqualLongChecker.cs" />
     <Compile Include="Checkers\LengthChecker.cs" />
+    <Compile Include="Checkers\LessThanDecimalChecker.cs" />
+    <Compile Include="Checkers\LessThanDoubleChecker.cs" />
+    <Compile Include="Checkers\LessThanFloatChecker.cs" />
+    <Compile Include="Checkers\LessThanIntChecker.cs" />
+    <Compile Include="Checkers\LessThanLongChecker.cs" />
+    <Compile Include="Checkers\LessThanOrEqualDecimalChecker.cs" />
+    <Compile Include="Checkers\LessThanOrEqualDoubleChecker.cs" />
+    <Compile Include="Checkers\LessThanOrEqualFloatChecker.cs" />
+    <Compile Include="Checkers\LessThanOrEqualIntChecker.cs" />
+    <Compile Include="Checkers\LessThanOrEqualLongChecker.cs" />
+    <Compile Include="Checkers\NotNullOrEmptyListChecker.cs" />
     <Compile Include="Checkers\MustNotChecker.cs" />
     <Compile Include="Checkers\NotEqualChecker.cs" />
     <Compile Include="Checkers\NotNullChecker.cs" />
     <Compile Include="Checkers\MustChecker.cs" />
-    <Compile Include="Checkers\NotNullOrEmptyChecker.cs" />
+    <Compile Include="Checkers\NotNullOrEmptyStringChecker.cs" />
     <Compile Include="Checkers\NotNullOrWhiteSpaceChecker.cs" />
+    <Compile Include="Checkers\NotRegexChecker.cs" />
     <Compile Include="Checkers\RegexChecker.cs" />
     <Compile Include="CollectionSyntax.cs" />
     <Compile Include="Common\Comparer.cs" />
