--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,9 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+
+# unit
+TestResult.xml
+CodeCoverage.xml
+report/
