--- a/ObjectValidator/ObjectValidator.csproj
+++ b/ObjectValidator/ObjectValidator.csproj
@@ -53,22 +53,27 @@
     <Compile Include="Checkers\CustomChecker.cs" />
     <Compile Include="Checkers\EachChecker.cs" />
     <Compile Include="Checkers\EqualChecker.cs" />
+    <Compile Include="Checkers\GreaterThanDateTimeChecker.cs" />
     <Compile Include="Checkers\GreaterThanFloatChecker.cs" />
     <Compile Include="Checkers\GreaterThanIntChecker.cs" />
     <Compile Include="Checkers\GreaterThanDecimalChecker.cs" />
     <Compile Include="Checkers\GreaterThanDoubleChecker.cs" />
     <Compile Include="Checkers\GreaterThanLongChecker.cs" />
+    <Compile Include="Checkers\GreaterThanOrEqualDateTimeChecker.cs" />
     <Compile Include="Checkers\GreaterThanOrEqualDecimalChecker.cs" />
     <Compile Include="Checkers\GreaterThanOrEqualDoubleChecker.cs" />
     <Compile Include="Checkers\GreaterThanOrEqualFloatChecker.cs" />
     <Compile Include="Checkers\GreaterThanOrEqualIntChecker.cs" />
     <Compile Include="Checkers\GreaterThanOrEqualLongChecker.cs" />
+    <Compile Include="Checkers\InListChecker.cs" />
     <Compile Include="Checkers\LengthChecker.cs" />
+    <Compile Include="Checkers\LessThanDateTimeChecker.cs" />
     <Compile Include="Checkers\LessThanDecimalChecker.cs" />
     <Compile Include="Checkers\LessThanDoubleChecker.cs" />
     <Compile Include="Checkers\LessThanFloatChecker.cs" />
     <Compile Include="Checkers\LessThanIntChecker.cs" />
     <Compile Include="Checkers\LessThanLongChecker.cs" />
+    <Compile Include="Checkers\LessThanOrEqualDateTimeChecker.cs" />
     <Compile Include="Checkers\LessThanOrEqualDecimalChecker.cs" />
     <Compile Include="Checkers\LessThanOrEqualDoubleChecker.cs" />
     <Compile Include="Checkers\LessThanOrEqualFloatChecker.cs" />
@@ -82,6 +87,7 @@
     <Compile Include="Checkers\NotNullOrEmptyStringChecker.cs" />
     <Compile Include="Checkers\NotNullOrWhiteSpaceChecker.cs" />
     <Compile Include="Checkers\NotRegexChecker.cs" />
+    <Compile Include="Checkers\NullableNotNullChecker.cs" />
     <Compile Include="Checkers\RegexChecker.cs" />
     <Compile Include="CollectionSyntax.cs" />
     <Compile Include="Common\Comparer.cs" />
