--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExpectedObjects" version="1.1.1" targetFramework="net4" />
-  <package id="Moq" version="4.2.1402.2112" targetFramework="net4" />
-  <package id="NUnit" version="2.6.4" targetFramework="net4" />
-  <package id="Should" version="1.1.20" targetFramework="net4" />
-  <package id="SpecsFor" version="4.3.2" targetFramework="net4" />
-  <package id="structuremap" version="3.1.0.133" targetFramework="net4" />
-  <package id="structuremap.automocking.moq" version="3.1.0.133" targetFramework="net4" />
+  <package id="NUnit" version="3.2.0" targetFramework="net40" />
+  <package id="NUnit.ConsoleRunner" version="3.2.0" targetFramework="net40" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.2.0" targetFramework="net40" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.2.0" targetFramework="net40" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.2.0" targetFramework="net40" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.2.0" targetFramework="net40" />
+  <package id="NUnit.Runners" version="3.2.0" targetFramework="net40" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net40" />
+  <package id="ReportGenerator" version="2.4.4.0" targetFramework="net40" />
 </packages>
