--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -66,8 +66,11 @@
     <Compile Include="Checkers\NotEqualChecker_Test.cs" />
     <Compile Include="Checkers\NotNullChecker_Test.cs" />
     <Compile Include="Checkers\RegexChecker_Test.cs" />
+    <Compile Include="Common\Comparer_Test.cs" />
     <Compile Include="Common\EnumerableHelper_Test.cs" />
+    <Compile Include="Common\NotifyCollectionChangedEventArgs_Test.cs" />
     <Compile Include="Common\ObservableCollection_Test.cs" />
+    <Compile Include="Common\ParamHelper_Test.cs" />
     <Compile Include="Common\Utils_Test.cs" />
     <Compile Include="Entities\ValidateResult_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
