--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -7,6 +7,7 @@
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.2.0" targetFramework="net40" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.2.0" targetFramework="net40" />
   <package id="NUnit.Runners" version="3.2.0" targetFramework="net40" />
+  <package id="NUnitTDNet" version="3.0.1.0" targetFramework="net40" />
   <package id="OpenCover" version="4.6.519" targetFramework="net40" />
   <package id="ReportGenerator" version="2.4.4.0" targetFramework="net40" />
 </packages>
