add between checker unit test

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Base\ValidateRule_Test.cs" />
     <Compile Include="Base\ValidatorBuilder_Test.cs" />
     <Compile Include="Base\Validator_Test.cs" />
+    <Compile Include="Checkers\BetweenChecker_Test.cs" />
     <Compile Include="Checkers\LengthChecker_Test.cs" />
     <Compile Include="Checkers\MustChecker_Test.cs" />
     <Compile Include="Checkers\EqualChecker_Test.cs" />
