--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Common\Utils_Test.cs" />
     <Compile Include="Entities\ValidateResult_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyntaxTest\RuleCheckerSyntax_Test.cs" />
     <Compile Include="Validation_Test.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -97,6 +98,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
