--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Entities\ValidateResult_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyntaxTest\RuleCheckerSyntax_Test.cs" />
+    <Compile Include="SyntaxTest\RuleMessageSetterSyntax_Test.cs" />
     <Compile Include="Validation_Test.cs" />
   </ItemGroup>
   <ItemGroup>
