--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /ObjectValidator/bin/Debug/netcoreapp1.0
+/UT/bin/Debug/netcoreapp1.0
+/UT/obj/Debug/netcoreapp1.0
