add web api try

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ project.lock.json
 .build/
 .testPublish/
 /UT/obj/Debug/netcoreapp1.0
+/ObjectValidator/obj/Debug/netcoreapp1.0
+/WebTest/obj/Debug/netcoreapp1.0
